default/site/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site
  name: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  strategy: {}
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - image: nginx:stable
          name: nginx
          ports:
            - containerPort: 80
