default/site/service.yml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: site
