default/site/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
    - host: "tristan.moe"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: site
                port:
                  number: 80
  tls:
    - hosts:
        - "tristan.moe"
      secretName: le-cert-tristan-moe
